# zufall

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  run_experiments.py  setup.py  zufall.tex
doc/coverage/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_three_sat_py.html
doc/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_experiments_py.html  z_145eef247bfb46b6_three_sat_py.html
science/: gauss-dist.tex  markov-chain.tex  zufall.tex
src/: experiments.py  run_experiments.py  three_sat.py
tests/: report.txt  test_experiments.py  test_three_sat.py
