[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zufall"
version = "1.1.0"
description = "Algorithmus mit Zufall für 3-KNF"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Stephan Epp", email = "hjstephan86@gmail.com"}
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=html:doc/coverage",
    "--cov-report=term-missing",
]
markers = [
    "slow: markiert Tests als langsam",
    "integration: markiert Integrationstests",
    "unit: markiert Unit-Tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/venv/*", "src/experiments.py", "src/run_experiments.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
